<resources>
    <string name="app_name">Dive Calculator</string>
    <string name="calculators">Calculators</string>
    <string name="infoCalculatorsHtml">
        <![CDATA[
        <ul><b>MOD</b> - Maximum Operating Depth
        <ul><b>SAC</b> - Surface Air Consumption
        <ul><b>EAD</b> - Equivalent Air Depth
        <ul><b>EADD</b> - Equivalent Air Density Depth
        <ul><b>END</b> - Equivalent Narcotic Depth
        <ul><b>NDL</b> - No Decompression Limit
        <ul><b>TOD</b> - Theoretical Ocean Depth
        <ul>You will find more information inside each of the calculators.
        ]]>
    </string>
    <string name="infoSacHtml">
        <![CDATA[
        The <b>Surface Air Consumption</b> is an expression of your air consumption
        during the dive at sea (surface) level. As we all know, air consumption increases with depth
        because pressure increases, which reduces the volume of the gas, increasing the density of
        the air we breathe (as per Boyle’s Law).

        <ul><b>Why is it important to know your SAC?</b>
        <br>The two things that determine our bottom time are the breathing gas used and the No
        Decompression Limits (NDL). So you will surely need to know how much breathing gas you
        will need for a dive and that is why you need to calculate your SAC rate. Knowing the average
        depth of the dive (AVG) and the SAC, we can calculate the minimum gas that we are going to need,
        from there we can choose the volume of our tank and/or modify the dive plan.

        <br><br><b>What Is A Good SAC Rate?</b>
        <br>There is no such thing as a good or bad SAC rate as this will differ between diver to diver.
        On average a new diver may equate a 25 or 27 litres per minute but a relaxed and experienced
        diver may equate 15 to 18 litres per minute.

        <ul><b>What Affects SAC Rate?</b>
        <br>-Stress
        <br>-Exertion
        <br>-Physical shape
        <br>-Buoyancy
        <br>-Breathing
        <br>-Coldness

        <ul><b>How Can I Decrease My SAC Rate?</b>
        <br>Dive more to get more experience, better buoyancy, reduce stress and exertion. Stay in
        good physical shape, which improves oxygen consumption and improves breathing. Wear a suitable
        suit, so as not to get cold throughout the dive.
        ]]>
    </string>
    <string name="infoModHtml">
        <![CDATA[
            The <b>Maximum Operating Depth</b> is a depth limit based on the percentage of oxygen in a
            diver\'s breathing gas. With the higher concentration of oxygen in the gas, the lower
            will be the maximum depth.

            <ul><b>Why Should a Diver Calculate a MOD?</b>
            <br>Oxygen becomes toxic with depth, the higher the percentage of oxygen in the
            breathing gas, the lower the depth at which it becomes toxic.

            <ul><b>What happens if I exceed the MOD limit?</b>
            <br>Excessive doses of oxygen at high partial pressures can cause CNS toxicity and
            pulmonary intoxication.

            <br><br>CNS toxicity is a toxic effect that can cause seizures (drowning).
            Its predictability is limited and survival is low.

            <ul><b>Symptoms CNS toxicity may include:</b>
            <br>- Seizures
            <br>- Tunnel vision
            <br>- Auditory noises
            <br>- Nausea
            <br>- Tics
            <br>- Dizziness
            <br>- Irritability
        ]]>
    </string>
    <string name="infoEadHtml">
        <![CDATA[
            The <b>Equivalent Air Depth</b> is a way of approximating the decompression requirements
            of breathing gas mixtures that contain nitrogen and oxygen in different proportions to
            those in air, known as nitrox.

            <ul>The equivalent air depth, for a given nitrox mix and depth, is the depth of a dive
            when breathing air that would have the same partial pressure of nitrogen. So, for
            example, a gas mix containing 36% oxygen (EAN36) being used at 27 metres (89 ft) has an
            EAD of 20 metres (66 ft).

            <ul>This calculator is about calculating decompression using nitrox. For calculating
            narcotic effects using trimix, use END calculator (Equivalent narcotic depth).
        ]]>
    </string>
    <string name="infoEndHtml">
        <![CDATA[
            The <b>Equivalent Narcotic Depth</b> is used in technical diving as a way of estimating
            the narcotic effect of a breathing gas mixture, such as heliox and trimix.

            <ul>The method is, for a given mix and depth, to calculate the depth which would produce
            the same narcotic effect as when breathing air. It is <b>recommended not to exceed
            END of 30m</b>.

            <ul><b>Narcosis symptoms:</b>
            <br>- Marked impairment of intellectual capacity
            <br>- Degradation of neuromuscular performance
            <br>- Impaired ability to make sound decisions
            <br>- Impaired consciousness (short-term memory loss,
            visual impairment)
            <br>- Increased sensitivity to stress
        ]]>
    </string>
    <string name="infoTodHtml">
        <![CDATA[
            <b>Theoretical Ocean Depth</b> is used to convert your dives at altitude to equivalent
            dives in the ocean. Altitude diving is considered when it exceeds 300m above sea level.

            <ul>Once you find your Theoretical Ocean Depth (TOD), you can use your regular
            Recreational Dive Planner (RDP) to correctly plan your altitude dives.

            <ul>It is also important to refer to your computer/depth gauge manual to adjust them
            for altitude dives so that they display the correct depth.

            <ul>If you want to achieve even more accurate results, you have to take into account
            the density of water you are planning to dive in. The density of freshwater
            (1 kg per liter), for instance, is lower than that of seawater (1.027 kg per liter),
            whereas the water density in some saltwater lakes can be higher, and the higher the
            density, the shallower you will experience each additional atmosphere of pressure.
        ]]>
    </string>
    <string name="infoBestMixHtml">
        <![CDATA[

        ]]>
    </string>
    <string name="infoGasDensityHtml">
        <![CDATA[
            The increased density of the inhaled gas <b>increases</b> the diver`s <b>respiratory
            effort</b> and causes <b>accumulation of CO2</b> in the blood. CO2 is a gas with a
            narcotic potential 20 times greater than nitrogen and also increases the risk of Hypercapnea.

            <ul><b>What is the safe limit?</b>
            <br>It depends on the people, but in general terms it is considered as a maximum desirable
            density of up to 5.2 g/L and an absolute maximum of 6.2 g/L.

            <ul><b>How to reduce gas density?</b>
            <br>Helium can be added to the breathing gas mixture, it has a density 7 times less
            than nitrogen and 8 times less than oxygen. The second option is to reduce the maximum
            depth of the dive.
        ]]>
    </string>
    <string name="what_is_sac">What is SAC?</string>
    <string name="what_is_mod">What is MOD?</string>
    <string name="what_is_ead">What is EAD?</string>
    <string name="what_is_end">What is END?</string>
    <string name="what_is_tod">What is TOD?</string>
    <string name="what_is_best_mix">Info - Best Mix</string>
    <string name="whats_is_gas_density">Info - Gas Density</string>
    <string name="meaning_of_acronyms">Meaning of Acronyms</string>
    <string name="info_meaning_of_acronyms">Info - Meaning of acronyms</string>
    <string name="info_whats_is_sac">Info - Whats is SAC?</string>
    <string name="info_whats_is_mod">Info - Whats is MOD?</string>
    <string name="info_whats_is_ead">Info - Whats is EAD?</string>
    <string name="info_whats_is_end">Info - Whats is END?</string>
    <string name="info_whats_is_tod">Info - Whats is TOD?</string>
    <string name="info_whats_is_gas_density">Info - What is the density of gas?</string>
    <string name="info_whats_is_best_mix">Info - Whats is the optimal gas mix?</string>
    <string name="scuba_tank_1">Scuba Tank 1</string>
    <string name="scuba_tank_2">Scuba Tank 2</string>
    <string name="scuba_tank_3">Scuba Tank 3</string>
    <string name="mod_1">MOD 1</string>
    <string name="mod_2">MOD 2</string>
    <string name="mod_3">MOD 3</string>
    <string name="ead_1">EAD 1</string>
    <string name="ead_2">EAD 2</string>
    <string name="ead_3">EAD 3</string>
    <string name="end_1">END 1</string>
    <string name="end_2">END 2</string>
    <string name="end_3">END 3</string>
    <string name="tod_1">TOD 1</string>
    <string name="tod_2">TOD 2</string>
    <string name="tod_3">TOD 3</string>
    <string name="gas_density_1">Gas Density 1</string>
    <string name="gas_density_2">Gas Density 2</string>
    <string name="gas_density_3">Gas Density 3</string>
    <string name="best_mix_1">Optimal Gas Mix 1</string>
    <string name="best_mix_2">Optimal Gas Mix 2</string>
    <string name="best_mix_3">Optimal Gas Mix 3</string>
    <string name="delete_tank_1">Delete Tank 1</string>
    <string name="delete_tank_2">Delete Tank 2</string>
    <string name="delete_tank_3">Delete Tank 3</string>
    <string name="delete_mod_1">Delete MOD Block 1</string>
    <string name="delete_mod_2">Delete MOD Block 2</string>
    <string name="delete_mod_3">Delete MOD Block 3</string>
    <string name="delete_ead_1">Delete EAD Block 1</string>
    <string name="delete_ead_2">Delete EAD Block 2</string>
    <string name="delete_ead_3">Delete EAD Block 3</string>
    <string name="delete_end_1">Delete END Block 1</string>
    <string name="delete_end_2">Delete END Block 2</string>
    <string name="delete_end_3">Delete END Block 3</string>
    <string name="delete_tod_1">Delete TOD Block 1</string>
    <string name="delete_tod_2">Delete TOD Block 2</string>
    <string name="delete_tod_3">Delete TOD Block 3</string>
    <string name="delete_gas_density_1">Delete Gas Density Block 1</string>
    <string name="delete_gas_density_2">Delete Gas Density Block 2</string>
    <string name="delete_gas_density_3">Delete Gas Density Block 3</string>
    <string name="delete_best_mix_1">Delete Optimal Gas Mix Block 1</string>
    <string name="delete_best_mix_2">Delete Optimal Gas Mix Block 2</string>
    <string name="delete_best_mix_3">Delete Optimal Gas Mix Block 3</string>
    <string name="sac_long">Surface Air Consumption</string>
    <string name="mod_long">Maximum Operating Depth</string>
    <string name="ead_long">Equivalent Air Depth</string>
    <string name="end_long">Equivalent Narcotic Depth</string>
    <string name="tod_long">Theoretical Ocean Depth</string>
    <string name="add_block">Add Block</string>
    <string name="tank_volume">Tank Volume</string>
    <string name="initial_pressure">Initial Pressure</string>
    <string name="final_pressure">Final Pressure</string>
    <string name="average_depth">Average Depth</string>
    <string name="dive_time">Dive Time</string>
    <string name="total_sac">Total SAC</string>
    <string name="view_history">View History</string>
    <string name="save_sac_in_history">Save SAC in History</string>
    <string name="calculate">Calculate</string>
    <string name="required">required</string>
    <string name="oxygen_percent">Oxygen Percentage</string>
    <string name="ppo2_interest">PPO2 of Interest</string>
    <string name="mod_12">MOD – 1.2 ppo2</string>
    <string name="mod_14">MOD – 1.4 ppo2</string>
    <string name="mod_16">MOD – 1.6 ppo2</string>
    <string name="mod_user">MOD - Calculated</string>
    <string name="mix_12">Best Mix – 1.2 ppo2</string>
    <string name="depth">Depth</string>
</resources>